fixed ui on smaller screens. misc fixes.

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -294,9 +294,14 @@ ul {
 }
 
 body {
-  background-image: url("../public/paper1.svg");
+  background-image: url("../paper1.svg");
   background-size: 100% 100%;
   -o-background-size: 100% 100%;
   -webkit-background-size: 100% 100%;
   background-size: cover;
+ }
+
+ .wait-div {
+  color: $primary-600;
+  position: absolute;
  }
